2004-11-03  Vincent Noel  <vnoel@cox.net>

	* info.c: Mark the info strings for translation.

2004-11-02  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_set_window_title): Use a display name if the
	log was opened through a temporary file.

	* logrtns.c (OpenLogFile): Add detection and opening of zipped archive.

	* logview.c (logview_create_window): Use g_signal_connect instead
	of gtk_signal_connect.
	(logview_create_window_open_file): Show the window when the log is loaded.

	* info.c (LogInfo): Huge simplification. No more gtktreeview, just
	display the properties in a textview.
	(LogInfo): Use g_signal_connect instead of gtk_signal_connect.

	* logview.c (logview_create_window_open_file): Don't update the
	status bar or the window title here, this is already done in log_repaint.

	* info.c (RepaintLogInfo): Don't use gtk_tree_model_get_iter_root.

	* logview.c (logview_menus_set_state): Desensitize menu items when
	monitoring.

	* monitor.c (mon_check_logs): Be sure to stop the monitoring when
	the file is closed.

	* logrtns.c (ReadNewLines, ReadLastPage): Free a temp buffer.

	* logview.h: Remove useless defines and stuff.

	* monitor.c (mon_update_display): When new lines are added to the
	logfile, select them in the monitor.

	* logrtns.c (reverse) : kill. We have g_strreverse anyway.
	(WasModified, CloseLog, ReadLogStats, ReadNewLines)
	(ReadLastPage, isLogFile, OpenLogFile): Use gnome-vfs.
	
	Aggregate the FIXME functions at the end of the file.

2004-10-31  James Bowes  <bowes@cs.dal.ca>

	* Makefile.am: Minor fixes to pass make distcheck.

2004-10-29  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_create_window_open_file): New function to
	create a window and open a file at the same time.
	(logview_count_logs): Fix a stupid bug that went unnoticed but
	made the function useless.
	(restore_session): Kill. Useless now that command line parameters
	are correctly handled.
	(save_session): Fix to save command line parameters.
	Use POPT_TABLEEND.