@@ -1,5 +1,15 @@
 2004-11-03  Vincent Noel  <vnoel@cox.net>
 
+	* logrtns.c (file_is_zipped): New.
+	(OpenLogFile): Check if the file is zipped, and unzip it in a temp
+	directory if it is.
+
+	* logview.c (SetDefaultUserPrefs): When trying to open the logfile
+	saved in gconf, fail silently if the file is not a log. 
+	(logview_set_window_title): When opening a zipped log, use the
+	name of the original zipfile and not the unzipped file.
+	(logview_menus_set_state): Don't allow monitoring for zipped logs.
+
 	* info.c: Mark the info strings for translation.
 
 2004-11-02  Vincent Noel  <vnoel@cox.net>
